--- a/public_html/Styles/FishBodyReader.css
+++ b/public_html/Styles/FishBodyReader.css
@@ -631,15 +631,15 @@
  *
  * Status:
  */
-#toolSelectorLabel
+#title
 {
     /*Size & Position*/
     position: fixed;
-    width: 10%;
-    height: 4%;
-    top: 7%;
-    right: 12%;
-    z-index: 2
+    top: 6%;
+    left: 22%;
+    z-index: 2;
+    /*Font*/
+    font-size: 2em;
 }
 
 /* 
@@ -651,7 +651,7 @@
 {
     /*Size & Position*/
     position: fixed;
-    width: 10%;
+    width: 12%;
     height: 4%;
     top: 6%;
     right: 5%;
