--- a/public_html/Styles/FluidSphere.css
+++ b/public_html/Styles/FluidSphere.css
@@ -26,7 +26,7 @@
     left: 2%;
     width: 20%;
     /*Colors & Effects*/
-    background: linear-gradient(lightblue, blue); /* Standard syntax */
+    background: linear-gradient(lightblue, blue);
     transition: color 1.5s;
     transition: background 1.5s;
     border-bottom-right-radius:2em;
@@ -47,9 +47,7 @@
 .input
 {
     /*Size & Position*/
-    position: absolute;
-    left: 15%;
-    width: 71%;
+    width: 7%;
     height: 3%;    
     /*Colors & Effects*/
     transition: color 0.35s;
@@ -87,35 +85,58 @@
     border-radius: 100%;
 }
 
+#temperatureLabel
+{
+    /*Size & Position*/
+    position: fixed;
+    width: 14.35%;
+    height: 5%;
+    top: 26.5%;
+    left: 4%; 
+}
+
 #temperature
 {
     /*Size & Position*/
-    position: absolute;
-    top:  17%;
+    position: fixed;
+    left: 4%;
+    top:  29%;
+}
+
+#salinityLabel
+{
+    /*Size & Position*/
+    position: fixed;
+    width: 14.35%;
+    height: 5%;
+    top: 33.5%;
+    left: 4%; 
 }
 
 #salinity
 {
     /*Size & Position*/
-    position: absolute;
-    top:  22%;
+    position: fixed;
+    left: 4%;
+    top:  36%;
+}
+
+#depthLabel
+{
+    /*Size & Position*/
+    position: fixed;
+    width: 14.35%;
+    height: 5%;
+    top: 40.5%;
+    left: 4%; 
 }
 
 #depth
 {
     /*Size & Position*/
-    position: absolute;
-    top:  27%;  
-}
-
-#calculateSeaWaterPropertiesButton
-{
-    /*Size & Position*/
     position: fixed;
-    width: 14.35%;
-    height: 4%;
-    top: 40%;
-    left: 5%;
+    left: 4%;
+    top:  43%;  
 }
 
 #waterDensityLabel
@@ -124,18 +145,17 @@
     position: fixed;
     width: 14.35%;
     height: 5%;
-    top: 45%;
-    left: 5%; 
+    top: 26.5%;
+    left: 13%; 
 }
 
 #waterDensity
 {
+    
     /*Size & Position*/
     position: fixed;
-    width: 14.35%;
-    height: 3%;
-    top: 48%;
-    left: 5%; 
+    top: 29%;
+    left: 13%; 
 }
 
 #waterWaveVelocityLabel
@@ -144,18 +164,16 @@
     position: fixed;
     width: 14.35%;
     height: 5%;
-    top: 53%;
-    left: 5%; 
+    top: 33.5%;
+    left: 13%; 
 }
 
 #waterWaveVelocity
 {
     /*Size & Position*/
     position: fixed;
-    width: 14.35%;
-    height: 3%;
-    top: 56%;
-    left: 5%;
+    top: 36%;
+    left: 13%;
 }
 
 #acousticScatteringForAFluidSphereChartBlock
@@ -172,11 +190,10 @@
 {
     /*Size & Position*/
     position: absolute;
-    top: 0%;
-    left: 1%;
-    width: 90%;
-    height: 60%;
-    
+    bottom: 10%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
 }
 
 #sphereCompositionLabel
@@ -185,18 +202,16 @@
     position: fixed;
     width: 14.35%;
     height: 5%;
-    top: 61%;
-    left: 5%; 
+    top: 50.5%;
+    left: 4%; 
 }
 
 #sphereCompositionSelector
 {
     /*Size & Position*/
     position: fixed;
-    width: 14.35%;
-    height: 4%;
-    top: 64%;
-    left: 5%;
+    top: 53%;
+    left: 4%;
 }
 
 
@@ -206,18 +221,16 @@
     position: fixed;
     width: 14.35%;
     height: 5%;
-    top: 69%;
-    left: 5%; 
+    top: 57.5%;
+    left: 4%; 
 }
 
 #sphereDensity
 {
     /*Size & Position*/
     position: fixed;
-    width: 14.35%;
-    height: 3%;
-    top: 72%;
-    left: 5%; 
+    top: 60%;
+    left: 4%; 
 }
 
 #sphereWaveVelocityLabel
@@ -226,38 +239,66 @@
     position: fixed;
     width: 14.35%;
     height: 5%;
-    top: 77%;
-    left: 5%; 
+    top: 64.5%;
+    left: 4%; 
 }
 
 #sphereWaveVelocity
 {
     /*Size & Position*/
     position: fixed;
-    width: 14.35%;
-    height: 3%;
-    top: 80%;
-    left: 5%;
+    top: 67%;
+    left: 4%;
 }
 
 #sphereRadiusLabel
 {
     /*Size & Position*/
     position: fixed;
-    width: 14.35%;
-    height: 5%;
-    top: 85%;
-    left: 5%; 
+    top: 50.5%;
+    left: 13%; 
 }
 
 #sphereRadius
 {
     /*Size & Position*/
     position: fixed;
-    width: 14.35%;
+    top: 53%;
+    left: 13%;
+}
+
+#gFactorLabel
+{
+    /*Size & Position*/
+    position: fixed;
+    width: 4%;
     height: 3%;
-    top: 88%;
-    left: 5%;
+    top: 57.5%;
+    left: 13%; 
+}
+
+#gFactor
+{
+    /*Size & Position*/
+    position: fixed;
+    top: 60%;
+    left: 13%; 
+}
+
+#hFactorLabel
+{
+    /*Size & Position*/
+    position: fixed;
+    top: 64.5%;
+    left: 13%; 
+}
+
+#hFactor
+{
+    /*Size & Position*/
+    position: fixed;
+    top: 67%;
+    left: 13%; 
 }
 
 #lowerBoundLabel
@@ -265,56 +306,48 @@
     /*Size & Position*/
     position: fixed;
     width: 15%;
-    top: 77%;
-    left: 33%;
+    top: 74.5%;
+    left: 4%;
 }
 
 #lowerBoundInput
 {
     /*Size & Position*/
     position: fixed;
-    width: 5%;
-    height: 4%;
-    top: 80%;
-    left: 33%;
+    top: 77%;
+    left: 4%;
 }
 
 #upperBoundLabel
 {
     /*Size & Position*/
     position: fixed;
-    width: 15%;
-    top: 77%;
-    left: 41%;
+    top: 74.5%;
+    left: 13%;
 }
 
 #upperBoundInput
 {
     /*Size & Position*/
     position: fixed;
-    width: 5%;
-    height: 4%;
-    top: 80%;
-    left: 41%;
+    top: 77%;
+    left: 13%;
 }
 
 #incrementLabel
 {
     /*Size & Position*/
     position: fixed;
-    width: 15%;
-    top: 77%;
-    left: 49%;
+    top: 81.5%;
+    left: 4%;
 }
 
 #incrementInput
 {
     /*Size & Position*/
     position: fixed;
-    width: 5%;
-    height: 4%;
-    top: 80%;
-    left: 49%;
+    top: 84%;
+    left: 4%;
     
 }
 
@@ -322,10 +355,21 @@
 {
     /*Size & Position*/
     position: fixed;
-    width: 10%;
-    height: 5%;
-    top: 80%;
-    left: 57%;
+    top: 84%;
+    width: 7.2%;
+    height: 3.5%;
+    left: 13%;
+}
+
+#downloadSolution
+{
+    /*Size & Position*/
+    position: fixed;
+    top: 91%;
+    left: 3.9%;
+    width: 16.1%;
+    height: 3.5%;
+    
 }
 
 #systemLog
@@ -372,42 +416,3 @@
     z-index: 2
 }
 
-#gFactor
-{
-    /*Size & Position*/
-    position: fixed;
-    width: 4%;
-    height: 3%;
-    top: 92%;
-    left: 8%; 
-}
-
-#hFactor
-{
-    /*Size & Position*/
-    position: fixed;
-    width: 4%;
-    height: 3%;
-    top: 92%;
-    left: 15.4%; 
-}
-
-#gFactorLabel
-{
-    /*Size & Position*/
-    position: fixed;
-    width: 4%;
-    height: 3%;
-    top: 93%;
-    left: 5%; 
-}
-
-#hFactorLabel
-{
-    /*Size & Position*/
-    position: fixed;
-    width: 4%;
-    height: 3%;
-    top: 93%;
-    left: 12.6%; 
-}
